[project]
authors = [{name = "Jonathan Moore", email = "jonathanmoorephd@gmail.com"}]
name = "cyto-shiny"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["ipysigma>=0.24.5,<0.25"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cyto_shiny = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipycytoscape = ">=1.3.3,<2"
shiny = ">=1.3.0,<2"
shinywidgets = ">=0.5.1,<0.6"
networkx = ">=3.4.2,<4"
ipython = ">=9.0.2,<10"
ipdb = ">=0.13.13,<0.14"
ruff = ">=0.11.2,<0.12"
basedpyright = ">=1.28.3,<2"
pytest = ">=8.3.5,<9"
jupyterlab = ">=4.3.6,<5"
ipyleaflet = ">=0.19.2,<0.20"
