[project]
authors = [{name = "Jonathan Moore", email = "jonathanmoorephd@gmail.com"}]
name = "navigator"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["ipysigma>=0.24.5,<0.25", "shinyswatch>=0.9.0,<0.10", "shinylive>=0.8.3,<0.9"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
navigator = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipycytoscape = ">=1.3.3,<2"
shiny = ">=1.3.0,<2"
shinywidgets = ">=0.5.1,<0.6"
networkx = ">=3.4.2,<4"
ipython = ">=9.0.2,<10"
ipdb = ">=0.13.13,<0.14"
ruff = ">=0.11.2,<0.12"
basedpyright = ">=1.28.3,<2"
pytest = ">=8.3.5,<9"
jupyterlab = ">=4.3.6,<5"
ipyleaflet = ">=0.19.2,<0.20"
pandas = ">=2.2.3,<3"
pyvis = ">=0.3.2,<0.4"
pandas-stubs = ">=2.3.0.250703,<3"
thefuzz = ">=0.22.1,<0.23"
python-levenshtein = ">=0.27.1,<0.28"
cytoolz = ">=1.0.1,<2"
